new design & stories attempt

--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Market indicator for Cosmos Ecosystem.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="cosmoscap">
   <link rel="apple-touch-icon" href="cosmos.png">
+
+  
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="cosmos.png"/>
@@ -36,7 +38,7 @@
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('flutter-first-frame', function () {
-        navigator.serviceWorker.register('flutter_service_worker.js?v=1534040743');
+        navigator.serviceWorker.register('flutter_service_worker.js?v=1621410522');
       });
     }
   </script>
