backdate a bit until proper slow release over time.

--- a/index.html
+++ b/index.html
@@ -15,18 +15,16 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="Leading site for Cosmos projects listed by Market capitalization, and so much more.">
+  <meta name="description" content="A new Flutter project.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="cosmoscap">
-  <link rel="apple-touch-icon" href="cosmosTwo.jpg">
-
-  
+  <link rel="apple-touch-icon" href="cosmos.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="cosmosTwo.png"/>
+  <link rel="icon" type="image/png" href="cosmos.png"/>
 
   <title>Cosmos-Cap</title>
   <link rel="manifest" href="manifest.json">
@@ -38,7 +36,7 @@
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('flutter-first-frame', function () {
-        navigator.serviceWorker.register('flutter_service_worker.js?v=3532724564');
+        navigator.serviceWorker.register('flutter_service_worker.js?v=1534040743');
       });
     }
   </script>
