E-money api no longer needed, secret promo removed. Attempt fix for Safari

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A Leading site for Cosmos Market Capitalization and much more">
+  <meta name="description" content="Leading site for Cosmos Market Capitalization and much more">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -36,7 +36,7 @@
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('flutter-first-frame', function () {
-        navigator.serviceWorker.register('flutter_service_worker.js?v=1129193790');
+        navigator.serviceWorker.register('flutter_service_worker.js?v=592012476');
       });
     }
   </script>
